[package]
name = "batch-run"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["display"] }
iced = { version = "0.13.1", features = ["tokio"] }
iced_highlighter = "0.13.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.1", features = ["process"] }
toml = "0.9.6"
